update HasKey
